--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -53,7 +53,7 @@ features                                  :
     fontawesome_icon_name                 : heart
 
   - title                                 : Comprehensive Support
-    description                           : Our dedicated team prioritizes responsive communication, offering email support within 24 hours.
+    description                           : Our dedicated team prioritizes responsive communication, offering support, within 24 hours, through the GitHub issue tracker or email support at me@yurio.net
     fontawesome_icon_name                 : envelope
 
 # Theme Settings
